Fixed responsive layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,12 @@ a{
     text-decoration: none;
 }
 
-.block{
-    padding: 6rem 10%;
-}
-
 html{
     font-size: 62.5%;
+}
+
+.block{
+    padding: 6rem 10%;
 }
 
 /* ROOT VARIABLE */
@@ -163,9 +163,10 @@ html,body{
 }
 
 /* PRICE PLANS SECTION*/
-.plans{
-    padding: 2rem 9%;
+.plans h2{
+    margin-right: 11%;
 }
+
 .plans__list{
     display: grid;
     gap: 5rem;
@@ -245,6 +246,7 @@ html,body{
     }
     .plans__list{
         margin: 5rem 0;
+        gap: 0;
     }
 }
 
@@ -255,7 +257,7 @@ html,body{
     grid-template-rows: auto;
     justify-items: center;
     gap: 3rem;
-    padding: 5rem 4rem 5rem 0;
+    padding: 5rem 4rem;
 }
 
 .feature__desc .btn{
@@ -326,9 +328,10 @@ html,body{
 
 .contact-us__header,
 .contact-us__body{
-    width: 100%;
+    max-width: 100vw;
     text-align: center;
     padding: 1rem;
+    justify-content: center;
 }
 
 .contact-us__header h2{
@@ -361,6 +364,7 @@ html,body{
     gap: 2rem;
     padding: 0 1rem;
     align-items: center;
+    max-width: 100vw;
 }
 
 .contact-us__info__text{
@@ -432,14 +436,14 @@ html,body{
 }
 
 .contact-us__form{
-    width: 37rem;
+    width: 90%;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     border: 1px solid #ddd;
     background: #fff;
     box-shadow: 0px 13px 19px 0px #00000012;
-    padding: 5rem;
+    padding: 2rem;
     align-items: center;
     direction: ltr;
     border-radius: 25px;
@@ -810,11 +814,12 @@ header .nav{
 
 /* BANNER SECTION */
 .banner{
-    height: calc(100vh - 61px);
+    /* height: calc(100vh - 61px); */
+    height: auto;
     width: 100%;
-    padding-bottom: 220px;
     position: relative;
     margin-top: 62px;
+    margin-bottom: 2rem;
 }
 
 .banner__img{
@@ -929,12 +934,28 @@ header .nav{
         width: 40rem;
         height: 100%;
         position: absolute;
-        bottom: -17%;
+        bottom: -37%;
         left: 10%;
      }
 }
 
 /* SERVICES SECTION */
+.nav-tabs::-webkit-scrollbar {
+    /* width: 5px; Mostly for vertical scrollbars */
+    height: 5px; /* Mostly for horizontal scrollbars */
+}
+   
+.nav-tabs::-webkit-scrollbar-thumb { /* Foreground */
+    background: #ddd;
+    border-radius: 1rem;
+
+
+}
+   
+.nav-tabs::-webkit-scrollbar-track { /* Background */
+    border-radius: 1rem;
+}
+
 .services.block{
     padding: 2rem 10%;
 }
@@ -950,6 +971,7 @@ header .nav{
     align-items: center;
     overflow-x: auto;
     padding-bottom: 1rem;
+    /* margin-top: 1.5rem; */
 }
 
 .nav__tab{
